--- a/css/seongjongju.css
+++ b/css/seongjongju.css
@@ -23,7 +23,7 @@ header {
     width: 100%;
     height: 100px;
     position: fixed;
-    color: #111111;
+    color: #fff;
     z-index: 1000;
     transition: color 0.3s;
 }
@@ -50,14 +50,11 @@ header nav>a {
     width: calc(100%/4);
     text-align: center;
     line-height: 40px;
-    /* border-radius: 30px;
-    transition: all 0.3s; */
-    color: #ab5f2e;
     transition: all 0.3s;
 }
 
 header nav>a:hover {
-    color: #1c3d5a;
+    color: #cdcdcd;
 }
 
 /* //header */
@@ -65,7 +62,7 @@ header nav>a:hover {
 /* section1 */
 #section1 {
     /* background-color: #fff1d4; */
-    background: url(../img/bg_main3.png) no-repeat center/cover;
+    background: url(../img/stars-13910.gif) no-repeat center/cover;
     height: 100vh;
 }
 
@@ -80,11 +77,11 @@ header nav>a:hover {
     text-shadow:
         -2px -2px 0 #ffffff,
         /* 상단 왼쪽 테두리 */
-        2px -2px 0 #0f8956,
+        2px -2px 0 #31351e,
         /* 상단 오른쪽 테두리 */
-        -2px 2px 0 #78ffd6,
+        -2px 2px 0 #c2c2c2,
         /* 하단 왼쪽 테두리 */
-        2px 2px 0 #044431;
+        2px 2px 0 #31351e;
     /* 하단 오른쪽 테두리 */
     padding-top: 12%;
 }
@@ -312,7 +309,7 @@ header nav>a:hover {
     display: inline-block;
     margin-right: 15px;
     text-align: center;
-    color: #1c3d5a;
+    color: #000;
     font-weight: 300;
 }
 
@@ -590,5 +587,96 @@ header nav>a:hover {
     background-color: #585858;
     color: #fcfcfc;
 }
-
 /* //section5 */
+
+/* section6 */
+#section6 {
+    height: 80vh;
+}
+#section6 h3 {
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+#section6 h3>span {
+    font-size: 18px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+#section6>span {
+    display: inline-block;
+    margin-right: 15px;
+    text-align: center;
+    color: #1c3d5a;
+    font-weight: 300;
+}
+
+#section6 .mokup_area {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding-top: 80px;
+}
+
+#section6 .mokup_area .mokup {
+    width: 50%;
+    height: 75%;
+    border-radius: 30px;
+    margin-bottom: 30px;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
+    margin: 0 5% 0 9.5%;
+}
+
+#section6 .mokup_area .mokup>figure>img {
+    width: 100%;
+}
+
+#section6 .mokup_area .mokup .mokups {
+    width: 100%;
+    height: 100%;
+}
+
+#section6 .mokup_area .text_area {
+    width: 25%;
+}
+
+#section6 .mokup_area .text_area>p {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+
+#section6 .mokup_area .text_area>h4 {
+    font-size: 21px;
+    margin-bottom: 10px;
+}
+
+#section6 .mokup_area .text_area>span {
+    display: inline-block;
+    margin-right: 15px;
+    margin-bottom: 40px;
+    color: rgba(0, 0, 0, 0.7);
+}
+#section6 .mokup_area .text_area>span:nth-of-type(5) {
+    display: block;
+}
+#section6 .mokup_area .text_area>a {
+    display: inline-block;
+    font-size: 16px;
+    width: 45%;
+    margin-right: 15px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 40px;
+    transition: all 0.5s;
+}
+
+#section6 .mokup_area .text_area>a:hover {
+    background-color: #000;
+    color: #fcfcfc;
+}
+/* //section6 */
