--- a/css/style.css
+++ b/css/style.css
@@ -356,17 +356,69 @@ header nav>a:hover {
 #publishing {
     background: #fafafa url(../img/antenna_logo.png) no-repeat 120% -30%/800px;
 }
+#publishing4 {
+    background: #fff url(../img/musium_bg_logo.png) no-repeat 120% -55%/750px;
+}
 #publishing2 {
     background: #fff url(../img/bonjourparis_logo.png) no-repeat 130% -55%/1000px;
 }
+#publishing3 {
+    background: #ececec;
+    position: relative;
+    overflow: hidden;
+}
+/* 루프 이미지 */
+#publishing3 .loop {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    animation: slide 80s infinite linear;
+}
+#publishing3 .loop .loop .slide_logo {
+    margin-right: 200px;
+}
+@keyframes slide {
+    0% {
+        left: 0%;
+    }
+    100% {
+        left: -500%;
+    }
+}
+/* 루프 이미지 */
+
 .publishing_area {
-    margin: 70px auto 0;
+    margin: 50px auto 0;
     display: flex;
     justify-content: space-between;
 }
+#publishing4 .publishing_area,
 #publishing2 .publishing_area {
     margin-top: 140px;
 }
+#publishing3 .publishing_area {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 140px;
+}
+/* #publishing3 이미지 */
+#publishing3 .publishing_area .mokups {
+    width: 50%;
+    max-height: 375px;
+    overflow: hidden;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
+}
+#publishing3 .publishing_area .mokups > img {
+    width: 100%;
+    height: auto;
+}
+/* #publishing3 이미지 */
+
 /* 이미지 */
 .publishing_area .mokups {
     width: 50%;
@@ -386,7 +438,7 @@ header nav>a:hover {
     width: 47%;
 }
 .publishing_area .publishing_text > h3 {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 .publishing_area .publishing_text > p {
     margin-bottom: 20px;
@@ -407,7 +459,7 @@ header nav>a:hover {
 
 /* 깃허브 */
 .publishing_area .publishing_text .code {
-    margin-top: 60px;
+    margin-top: 40px;
 }
 #publishing .publishing_area .publishing_text .code > a {
     display: inline-block;
@@ -423,6 +475,21 @@ header nav>a:hover {
 #publishing .publishing_area .publishing_text .code > a:hover {
     background-color: #FDE700;
 }
+#publishing4 .publishing_area .publishing_text .code > a {
+    display: inline-block;
+    width: 30%;
+    margin-right: 15px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #000;
+    border-radius: 40px;
+    transition: all 0.5s;
+}
+#publishing4 .publishing_area .publishing_text .code > a:hover {
+    background-color: #000;
+    color: #fcfcfc;
+}
 #publishing2 .publishing_area .publishing_text .code > a {
     display: inline-block;
     width: 30%;
@@ -437,5 +504,78 @@ header nav>a:hover {
 #publishing2 .publishing_area .publishing_text .code > a:hover {
     background-color: #FFA400;
 }
+#publishing3 .publishing_area .publishing_text .code > a {
+    display: inline-block;
+    width: 30%;
+    margin-right: 15px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #585858;
+    border-radius: 40px;
+    transition: all 0.5s;
+}
+#publishing3 .publishing_area .publishing_text .code > a:hover {
+    background-color: #585858;
+    color: #fcfcfc;
+}
 /* 깃허브 */
 /* //publishing */
+
+/* contact */
+#contact {
+    position: relative;
+}
+#contact .contact_inner {
+    max-width: 900px;
+    margin: 100px auto 0;
+    display: flex;
+    justify-content: space-between;
+}
+/* 이미지 */
+#contact .contact_inner > figure {
+    max-width: 400px;
+    max-height: 550px;
+    border-radius: 50%;
+}
+#contact .contact_inner > figure > img {
+    width: 100%;
+    height: auto;
+    border-radius:50%;
+}
+/* 이미지 */
+
+/* 텍스트 */
+#contact .contact_inner .contact_text > p:first-child {
+    margin-bottom: 20px;
+}
+#contact .contact_inner .contact_text > p:nth-of-type(2) {
+    margin-bottom: 50px;
+}
+#contact .contact_inner .contact_text > p:nth-of-type(3) {
+    background: url(../img/email.png) no-repeat left 6px / 20px;
+    padding-left: 30px;
+}
+#contact .contact_inner .contact_text > p:nth-of-type(4) {
+    background: url(../img/call.png) no-repeat left / 20px;
+    padding-left: 30px;
+    margin-bottom: 40px;
+}
+#contact .contact_inner .contact_text > p:nth-of-type(5) {
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.7);
+}
+/* 텍스트 */
+
+/* copy */
+#contact .copy {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0; left: 0;
+    background: #ebebeb;
+    line-height: 70px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.7);
+}
+/* copy */
