--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 /* 폰트사이즈 */
 html {
     font-size: 16px;
+    scroll-behavior: smooth;
 }
 body {
     font-size: 1rem;
@@ -28,9 +29,11 @@ body {
 .fs30 {
     font-size: 1.875rem;
 }
+.fs40 {
+    font-size: 2.5rem;
+}
 .fs60 {
     font-size: 3.75rem;
-    color: #BB1212;
 }
 /* 폰트사이즈 */
 .inner {
@@ -39,38 +42,42 @@ body {
 .inner2 {
     max-width: 1600px;
 }
+.inner3 {
+    max-width: 1000px;
+}
 section {
     position: relative;
     padding: 3% 3% 0;
     box-sizing: border-box;
     height: 100vh;
 }
+.title {
+    font-weight: 600;
+}
 /* 공통 */
 
 /* header */
 header {
     width: 100%;
-    height: 100px;
+    height: 70px;
     position: fixed;
-    color: #fff;
     z-index: 1000;
     transition: color 0.3s;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
 }
 header nav {
-    position: absolute;
-    top: 12%;
-    right: 0;
     width: 50%;
-    height: 40px;
+    height: 100%;
     display: flex;
-    justify-content: space-between;
 }
 header nav>a {
     display: inline-block;
     width: calc(100%/5);
     text-align: center;
-    line-height: 40px;
+    line-height: 70px;
     transition: all 0.3s;
+    color: #fff;
 }
 header nav>a:hover {
     color: #cdcdcd;
@@ -354,13 +361,13 @@ header nav>a:hover {
 
 /* publishing */
 #publishing {
-    background: #fafafa url(../img/antenna_logo.png) no-repeat 120% -30%/800px;
+    background: #fafafa url(../img/antenna_logo.png) no-repeat -200px 180%/800px;
 }
 #publishing4 {
     background: #fff url(../img/musium_bg_logo.png) no-repeat 120% -55%/750px;
 }
 #publishing2 {
-    background: #fff url(../img/bonjourparis_logo.png) no-repeat 130% -55%/1000px;
+    background: #fff url(../img/bonjourparis_logo.png) no-repeat -300px 180%/1000px;
 }
 #publishing3 {
     background: #ececec;
@@ -407,8 +414,8 @@ header nav>a:hover {
 }
 /* #publishing3 이미지 */
 #publishing3 .publishing_area .mokups {
-    width: 50%;
-    max-height: 375px;
+    width: 65%;
+    max-height: 485px;
     overflow: hidden;
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
@@ -421,8 +428,8 @@ header nav>a:hover {
 
 /* 이미지 */
 .publishing_area .mokups {
-    width: 50%;
-    max-height: 500px;
+    width: 65%;
+    max-height: 498px;
     overflow: hidden;
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 8px;
@@ -435,7 +442,7 @@ header nav>a:hover {
 
 /* 텍스트 */
 .publishing_area .publishing_text {
-    width: 47%;
+    width: 30%;
 }
 .publishing_area .publishing_text > h3 {
     margin-bottom: 20px;
@@ -463,7 +470,7 @@ header nav>a:hover {
 }
 #publishing .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 30%;
+    width: 25%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -477,7 +484,7 @@ header nav>a:hover {
 }
 #publishing4 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 30%;
+    width: 25%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -492,7 +499,7 @@ header nav>a:hover {
 }
 #publishing2 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 30%;
+    width: 25%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -506,7 +513,7 @@ header nav>a:hover {
 }
 #publishing3 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 30%;
+    width: 25%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -579,3 +586,32 @@ header nav>a:hover {
     color: rgba(0, 0, 0, 0.7);
 }
 /* copy */
+/* index.html----------------------------------------------------------------------------- */
+
+/* leanmore.html ------------------------------------------------------------------*/
+.container {
+    padding: 100px;
+    margin: 0 auto;
+}
+.container > img {
+    width: 100%;
+    margin-bottom: 100px;
+}
+.container .title {
+    color: #000;
+}
+.container > h2 {
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+.container > p {
+    margin-bottom: 10px;
+    padding-left: 10px;
+    color: rgba(0, 0, 0, 0.7);
+    font-weight: 500;
+}
+.container > p > span {
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.7);
+}
+/* leanmore.html ------------------------------------------------------------------*/
