--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ header nav>a:hover {
     content: '';
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: linear-gradient(to right,rgba(255,255,255,0),rgba(0,0,0,0.8));
+    background: rgba(0, 0, 0, 0.8);
 }
 #design>h2 {
     position: relative;
@@ -318,7 +318,7 @@ header nav>a:hover {
     content: '';
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: linear-gradient(to right,rgba(255,255,255,0),rgba(0,0,0,0.8));
+    background: rgba(0, 0, 0, 0.8);
 }
 #design2 .design2Area {
     position: relative;
