반응형 디자인 수정, 탑 이동 버튼 추가, 모바일 사이즈 헤더 수정

--- a/css/responsive_style.css
+++ b/css/responsive_style.css
@@ -777,7 +777,7 @@
     /* 드래그 이미지 */
     #design .drag {
         position: absolute;
-        top: 8%;
+        top: 11%;
         left: 45%;
         width: 45px;
         height: 45px;
@@ -862,6 +862,31 @@
     }
 
     /* home */
+
+     /* design */
+    /* 드래그 이미지 */
+    #design .drag {
+        position: absolute;
+        top: 11%;
+        left: 45%;
+        width: 45px;
+        height: 45px;
+        transform: rotate(180deg);
+        animation: move 1s ease infinite;
+    }
+
+    @keyframes move {
+        0% {
+            left: 45%;
+        }
+
+        100% {
+            left: 45.5%;
+        }
+    }
+
+    /* 드래그 이미지 */
+    /* design */
 
     /* design2 */
     /* 이미지 */
