--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,13 @@ header nav>a:hover {
     background: url(../img/stars-13910.gif) no-repeat center/cover;
 }
 #home > h2 {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);   
+    width: 100%;
     text-align: center;
     font-size: 6.5rem;
-    color: transparent;
+    color: transparent; 
     text-shadow:
         -2px -2px 0 #ffffff,
         /* 상단 왼쪽 테두리 */
@@ -111,7 +115,6 @@ header nav>a:hover {
         /* 하단 왼쪽 테두리 */
         2px 2px 0 #31351e;
     /* 하단 오른쪽 테두리 */
-    padding-top: 12%;
 }
 #home > h2 > span {
     display: block;
@@ -341,13 +344,13 @@ header nav>a:hover {
 }
 #design2 .design2Area {
     position: relative;
-    height: 90vh;
+    height: 90%;
     margin: 0 auto;
     display: flex;
 }
 /* 이미지 */
 #design2 .design2Area .design2_img1 {
-    width: 23%;
+    width: 20%;
     height: 100%;
     margin-right: 100px;
 }
@@ -356,16 +359,16 @@ header nav>a:hover {
     height: 100%;
 }
 #design2 .design2Area .mokup1 {
-    margin-top: 22%;
+    position: absolute;
+    bottom: -6%; right: 0;
     width: 60%;
     height: 65%;
 }
-#design2 .design2Area .mokup2 {
+#design2 .design2Area .mokup2 { 
     position: absolute;
-    margin-top: 38%;
     width: 34%;
     height: 40%;
-    left: 70%;
+    bottom: -6%; right: 0;
 }
 /* 이미지 */
 
@@ -485,8 +488,8 @@ header nav>a:hover {
 }
 #publishing .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 25%;
-    margin-right: 15px;
+    width: 29%;
+    margin-right: 15px;     
     margin-bottom: 20px;
     height: 40px;
     line-height: 40px;
@@ -495,16 +498,20 @@ header nav>a:hover {
     border-radius: 40px;
     transition: all 0.5s;
 }
+#publishing .publishing_area .publishing_text .code > a:nth-of-type(3) {
+    margin-right: 0;
+}
 #publishing .publishing_area .publishing_text .code > a:hover {
     background-color: #FDE700;
 }
 #publishing .publishing_area .publishing_text .code .antennaFigma {
     display: block;
-    width: 85%;
+    width: 96%;
+    margin-right: 0;
 }
 #publishing4 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 25%;
+    width: 29%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -513,13 +520,16 @@ header nav>a:hover {
     border-radius: 40px;
     transition: all 0.5s;
 }
+#publishing4 .publishing_area .publishing_text .code > a:nth-of-type(3) {
+    margin-right: 0;
+}
 #publishing4 .publishing_area .publishing_text .code > a:hover {
     background-color: #000;
     color: #fcfcfc;
 }
 #publishing2 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 25%;
+    width: 29%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -528,12 +538,15 @@ header nav>a:hover {
     border-radius: 40px;
     transition: all 0.5s;
 }
+#publishing2 .publishing_area .publishing_text .code > a:nth-of-type(3) {
+    margin-right: 0;
+}
 #publishing2 .publishing_area .publishing_text .code > a:hover {
     background-color: #FFA400;
 }
 #publishing3 .publishing_area .publishing_text .code > a {
     display: inline-block;
-    width: 25%;
+    width: 29%;
     margin-right: 15px;
     height: 40px;
     line-height: 40px;
@@ -541,6 +554,9 @@ header nav>a:hover {
     border: 1px solid #585858;
     border-radius: 40px;
     transition: all 0.5s;
+}
+#publishing3 .publishing_area .publishing_text .code > a:nth-of-type(3) {
+    margin-right: 0;
 }
 #publishing3 .publishing_area .publishing_text .code > a:hover {
     background-color: #585858;
